// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <div
      className="logo"
    >
      <Image
        src="opensrp-logo-color.png"
        width={200}
      />
    </div>,
    <Menu
      mode="horizontal"
      selectedKeys={
        Array [
          "/",
        ]
      }
    >
      <MenuItem>
        Home
      </MenuItem>
      <MenuItem
        style={
          Object {
            "float": "right",
          }
        }
      >
        <Link
          to="/login"
        >
          Login
        </Link>
      </MenuItem>
    </Menu>,
  ],
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <div
      className="logo"
    >
      <Image
        src="opensrp-logo-color.png"
        width={200}
      />
    </div>,
    <Menu
      mode="horizontal"
      selectedKeys={
        Array [
          "/",
        ]
      }
    >
      <MenuItem>
        Home
      </MenuItem>
      <SubMenu
        style={
          Object {
            "float": "right",
          }
        }
        title="RobertBaratheon"
      >
        <MenuItem>
          <Link
            to="/logout"
          >
            Logout
          </Link>
        </MenuItem>
      </SubMenu>
    </Menu>,
  ],
}
`;
